--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Buster's Best Bowling Alley- Boulder, CO</title>
+        <title>Buster's Bowling- Boulder, CO</title>
     </head>
     <body>
         <h1>Buster's Best Bowling Alley</h1>
